<resources>
    <string name="app_name">Inf024Project</string>
    <string name="mercedes_logo">mercedes logo</string>
    <string name="mercedes_text">Mercedes</string>
    <string name="buy_go">BUY-GO</string>
    <string name="text_under_the_logo">En iyisi ya da hiç.</string>
    <string name="or">ya da</string>
    <string name="register">Kayıt ol</string>
    <string name="facebook_login">Facebook ile devam et.</string>
    <string name="google_login">Google ile devam et.</string>
    <string name="register_requirement">Kayıt olarak veya giriş yaparak Şartlar ve Koşullar ve Gizlilik Politikasını kabul etmiş olursunuz.</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="email">E-Mail</string>
    <string name="password">Sifre</string>
    <string name="buy">BUY</string>
    <string name="go">GO</string>
    <string name="password_edit">Şifre</string>
    <string name="user_login_btn">Giriş Yap</string>
    <string name="successful_login">Kaydınız başarıyla tamamlanmıştır.</string>
    <string name="okey">Tamam</string>
    <string name="recording">Kayıt İşlemi</string>
    <string name="araba">Araba</string>
    <string name="bebek">Bebek</string>
    <string name="ev_gere_leri">Ev Gereçleri</string>
    <string name="giyim">Giyim</string>
    <string name="isim">isim</string>
    <string name="ki_isel_bilgiler">kişisel Bilgiler</string>
    <string name="adress">adress</string>
    <string name="telefon">telefon</string>
    <string name="bildirimler">Bildirimler</string>
    <string name="todo">TODO</string>
    <string name="bu_f_rsat_ka_rma_ahmet_in_yeni_lan_var">Bu fırsatı kaçırma Ahmet’in yeni lanı var!</string>
    <string name="bu_f_rsat_ka_rma_ahmet_in_yeni_ilan_var">Bu fırsatı kaçırma Ahmet’in yeni ilanı var!</string>
    <string name="test">test</string>
    <string name="g_z_at">Göz at</string>
    <string name="_02_april">02 April</string>
    <string name="_03_april">03 April</string>
    <string name="product_details">ilan detayı</string>
    <string name="titel">BAŞLIK</string>
    <string name="price">FİYAT</string>
    <string name="status">DURUM</string>
    <string name="define">TANIM</string>
    <string name="publish">YAYINLA</string>
</resources>
