<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/giris"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        style="@style/TextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mercedes_text"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/mercedes_text"
        android:textSize="70sp"
        app:fontFamily="@font/corporate" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_gravity="center"
        android:contentDescription="@string/mercedes_logo"
        app:srcCompat="@drawable/mercedes_logo" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/buy_go"
        android:textSize="50sp"
        app:fontFamily="@font/corporate" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_under_the_logo"
        android:textSize="20sp"
        app:fontFamily="@font/corporate" />

</LinearLayout>