<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView9"
        style="@style/TextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="45dp"
        android:text="@string/buy_go"
        android:textSize="50sp"
        app:fontFamily="@font/corporate" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:contentDescription="@string/mercedes_logo"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mercedes_login_logo" />

        <TextView
            android:id="@+id/text_under_the_logo"
            style="@style/TextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="45dp"
            android:text="@string/text_under_the_logo"
            android:textSize="20sp"
            app:fontFamily="@font/corporate"
            app:layout_constraintBottom_toTopOf="@+id/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />


        <Button
            android:id="@+id/register"
            style="@style/TextColor"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:background="@drawable/button"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_under_the_logo" />

        <Button
            android:id="@+id/login_login_options"
            style="@style/TextColor"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:background="@drawable/button"
            android:text="@string/user_login_btn"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_under_the_logo" />

        <TextView
            android:id="@+id/textView8"
            style="@style/TextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/or"
            android:textSize="20sp"
            app:fontFamily="@font/corporate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" />

        <Button
            android:id="@+id/facebook"
            style="@style/TextColor"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:layout_gravity="center"
            android:drawablePadding="-100dp"
            android:drawableLeft="@drawable/facebook"
            android:includeFontPadding="false"
            android:paddingLeft="12dp"
            android:text="@string/facebook_login"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:drawableStart="@drawable/facebook"
            android:paddingStart="12dp" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebook" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/login_login_options"
            app:layout_constraintStart_toEndOf="@+id/register"
            app:layout_constraintTop_toBottomOf="@+id/text_under_the_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/google"
        style="@style/TextColor"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:drawableStart="@drawable/google"
        android:drawableLeft="@drawable/google"
        android:drawablePadding="-110dp"
        android:paddingStart="12dp"
        android:paddingLeft="16dp"
        android:text="@string/google_login"
        android:textAllCaps="false" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView10"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="7dp"
            android:text="@string/register_requirement"
            android:textSize="13sp"
            app:fontFamily="@font/corporate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>