<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/kaydol"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    >


    <TextView
        android:id="@+id/register_tw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/corporate"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/register_btn"
        android:fontFamily="@font/corporate"
        android:gravity="center"
        android:hint="@string/name"
        android:textAllCaps="false"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tw" />

    <EditText
        android:id="@+id/surname_edit"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/register_btn"
        android:fontFamily="@font/corporate"
        android:gravity="center"
        android:hint="@string/surname"
        android:textAllCaps="false"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/register_btn"
        android:fontFamily="@font/corporate"
        android:gravity="center"
        android:hint="@string/email"
        android:textAllCaps="false"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_edit" />

    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/register_btn"
        android:fontFamily="@font/corporate"
        android:gravity="center"
        android:hint="@string/password"
        android:textAllCaps="false"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:background="@drawable/register_btn"
        android:fontFamily="@font/corporate"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_edit"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/text"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="7dp"
        android:text="@string/register_requirement"
        android:textSize="13sp"
        app:fontFamily="@font/corporate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>