<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainconstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/titel"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:background="@drawable/register_btn"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/titel"
            android:inputType="text"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="154dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/price"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="236dp"
            android:autofillHints=""
            android:background="@drawable/register_btn"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/price"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/status"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="320dp"
            android:autofillHints=""
            android:background="@drawable/register_btn"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/status"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/define"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="408dp"
            android:autofillHints=""
            android:background="@drawable/register_btn"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/define"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/publish_btn"
            style="@style/TextColor"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="128dp"
            android:background="#df55f2"
            android:text="@string/publish"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_pass" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_1"
            android:layout_width="404dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7">

            <TextView

                android:id="@+id/product_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#D6D6D6"

                android:gravity="center"
                android:text="@string/product_details"
                android:textFontWeight="@android:integer/config_longAnimTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <Button
                android:id="@+id/button"
                android:layout_width="30dp"
                android:layout_height="39dp"
                android:background="@drawable/icon_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.97"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#D6D6D6"
            android:contentDescription="@android:string/untitled"
            app:layout_constraintBottom_toBottomOf="@+id/mainconstraint"
            app:layout_constraintEnd_toEndOf="@+id/mainconstraint"
            app:layout_constraintStart_toStartOf="@+id/mainconstraint"
            app:layout_constraintTop_toTopOf="@+id/mainconstraint"
            app:layout_constraintVertical_bias="1"></ImageView>

        <Button
            android:id="@+id/home_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_home"
            app:layout_constraintBottom_toBottomOf="@+id/mainconstraint"
            app:layout_constraintEnd_toEndOf="@+id/mainconstraint"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/mainconstraint"
            app:layout_constraintTop_toTopOf="@+id/mainconstraint"
            app:layout_constraintVertical_bias="0.99"></Button>

        <Button
            android:id="@+id/bell_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_bell"
            app:layout_constraintBottom_toBottomOf="@+id/mainconstraint"
            app:layout_constraintEnd_toEndOf="@+id/mainconstraint"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="@+id/mainconstraint"
            app:layout_constraintTop_toTopOf="@+id/mainconstraint"
            app:layout_constraintVertical_bias="0.99"></Button>

        <Button
            android:id="@+id/camera_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_camera"
            app:layout_constraintBottom_toBottomOf="@+id/mainconstraint"
            app:layout_constraintEnd_toEndOf="@+id/mainconstraint"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/mainconstraint"
            app:layout_constraintTop_toTopOf="@+id/mainconstraint"
            app:layout_constraintVertical_bias="0.99"></Button>

        <Button
            android:id="@+id/menu_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_menu"
            app:layout_constraintBottom_toBottomOf="@+id/mainconstraint"
            app:layout_constraintEnd_toEndOf="@+id/mainconstraint"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="@+id/mainconstraint"
            app:layout_constraintTop_toTopOf="@+id/mainconstraint"
            app:layout_constraintVertical_bias="0.99"></Button>

        <Button
            android:id="@+id/profile_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_profile"
            app:layout_constraintBottom_toBottomOf="@+id/mainconstraint"
            app:layout_constraintEnd_toEndOf="@+id/mainconstraint"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="@+id/mainconstraint"
            app:layout_constraintTop_toTopOf="@+id/mainconstraint"
            app:layout_constraintVertical_bias="0.99"></Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>